# log-analyzer

./: .gitignore  Cargo.toml  Dockerfile.log-analyzer  Dockerfile.noise-maker  README.md  docker-compose.yml  justfile  prometheus.yml
grafana/dashboards/: log_analyzer.json
grafana/provisioning/dashboards/: log-analyzer.yaml
k8s/: grafana-dashboards-providers.yaml  grafana-dashboards.yaml  grafana-datasource.yaml  grafana.yaml  hpa-log-analyzer.yaml  hpa-noise-maker.yaml  log-analyzer.yaml  namespace.yaml  nats.yaml  noise-maker.yaml  prometheus.yaml
log-analyzer/: Cargo.toml
log-analyzer/logs/: log.txt
log-analyzer/src/: analytics.rs  ingest.rs  invariants.rs  main.rs  metrics_server.rs  models.rs  prometheus.rs  worker.rs
log-analyzer/tests/: integration.rs
noise-maker/: Cargo.toml
noise-maker/src/: args.rs  generator.rs  main.rs  stream.rs
noise-maker/tests/: integration.rs
