[package]
name = "log-analyzer"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"

[features]
default = []
kafka = []
pprof = ["dep:pprof"]

[dependencies]
async-nats = "0.42.0"
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["alloc", "std", "clock", "now", "serde"], default-features = false }
clap = { version = "4.5.41", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["full"] }
futures-util = "0.3.31"
lru = "0.16.0"
num-format = "0.4.4"
parking_lot = "0.12.4"
pprof = { version = "0.15.0", features = ["flamegraph", "protobuf-codec"], optional = true }
prometheus = "0.14.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = { version = "0.3.41", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
tryhard = "0.5.2"

[dev-dependencies]
asserting = "0.9.0"
portpicker = "0.1.1"
reqwest = "0.12.22"
testcontainers = "0.24.0"
testcontainers-modules = { version = "0.12.1", features = ["nats"] }

[profile.pprof]
inherits = "release"
debug = true
