[package]
name = "noise-maker"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"

[dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["alloc", "std", "clock", "now"] }
clap = { version = "4.5.41", features = ["derive"] }
rand = "0.9.1"
tokio = { version = "1.46.1", features = ["full"] }
